objeto carta e iniciar juego: selec. dos cartas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form class="form-inline my-2 my-lg-0">
+        <div class="form-inline my-2 my-lg-0">
           <div class="form-group">
             <input class="form-control mr-sm-2" type="text" placeholder="Usuario" aria-label="Usuario">
           </div>
@@ -37,8 +37,8 @@
             </select>
           </div>
           
-          <button style="margin-left: 5px; " class="btn btn-outline-success my-2 my-sm-0" type="submit">Iniciar</button>
-        </form>
+          <button style="margin-left: 5px; " class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="iniciarJuego()">Iniciar</button>
+        </div>
       </div>
     </nav>
 
