--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
           <div class="form-group mb-2">
             <label for="id_select_jugadores">Jugadores</label>
             <select class="form-control" id="id_select_jugadores" onchange="selectJugadores()">
-              <option value="1">1 Jugador</option>
-              <option value="2">2 Jugadores</option>
+            </select>
+          </div>
+
+          <div class="form-group mb-2">
+            <label for="id_grupo_imagenes">Estilo Cartas</label>
+            <select class="form-control" id="id_grupo_imagenes" onchange="selectImagenes()">
             </select>
           </div>
         </div>
@@ -83,10 +87,9 @@
 
           <div class="col-sm-4 col-12">
             <div class="row">
-              <button id="btn_iniciar" class="btn btn-outline-success col-12" type="button">Iniciar</button>
+              <button id="id_btn_iniciar" class="btn btn-outline-success col-12" type="button">Iniciar</button>
               <div class="col-12">
-                <div id="bloque_jugadores" class="row">
-                  
+                <div id="id_bloque_jugadores" class="row">                  
                 </div>
               </div>
             </div>
