guardar y mostrar historial

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <title>IAW-MemTest</title>
 </head>
 
-<body >
-  
+<body > 
 
     <div id="block-inicio" class="text-center">
       <form class="form-signin">
@@ -60,6 +59,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="button" onclick="mostrarJuego()">Iniciar</button>
+        <button class="btn btn-lg btn-primary btn-block" type="button" onclick="verHistorial()">Ver Historial</button>
       </form>
     </div>
 
@@ -99,6 +99,20 @@
       </div>
     </div>
   </div>
+
+  <!-- MODAL PARA MOSTRAR MENSAJES -->
+  <div class="modal fade bd-example-modal-lg" id="id_modal">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+
+        
+        
+      </div>
+    </div>
+  </div>
+  
+
+
 
   <!-- JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
