imagen encabezado y boton cerrar en historial

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="block-inicio" class="text-center">
       <form class="form-signin">
-        <img class="mb-4" src="./images/back-card.png" alt="" width="72" height="72">
+        <div id='encabezado' class="mb-4" alt="" > </div>
 
         <h1 class="h3 mb-3 font-weight-normal">Configurar jugada</h1>
 
@@ -114,7 +114,8 @@
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick="borrarHistorial()">Borrar Historial</button>
+          <button type="button" class="btn btn-danger" onclick="borrarHistorial()">Borrar Historial</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         </div>
 
       </div>
